<resources>
    <string name="app_name">Head Company</string>
    <string name="login">Iniciar sesión</string>
    <string name="signup">Registrarse</string>
    <string name="forgetpassword">He olvidado mi contraseña</string>
    <string name="mail">Correo</string>
    <string name="insertMail">Ingresa tu correo</string>
    <string name="password">Contraseña</string>
    <string name="insertPassword">Ingresa tu contraseña</string>
    <string name="repeatPassword">Repetir contraseña</string>
    <string name="confirmPassword">Confirma tu contraseña</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="email">Correo electrónico</string>
    <string name="myprofile">Mi perfil</string>

    <string name="filters">Filtros</string>
    <string name="accidentes">Accidentes</string>
    <string name="obras">Obras</string>
    <string name="meteorologia">Meteorologia</string>
    <string name="seguridad_vial">Seguridad vial</string>
    <string name="retencion">Retención</string>
    <string name="vialidad_invernal">Invernal</string>
    <string name="puertos_de_montana">Montaña</string>
    <string name="otros">Otros</string>
    <string name="camaras">Cámaras</string>
    <string name="camara">Cámara</string>
    <string name="cleanup">🧹 Limpiar todo</string>

    <string name="direccion">Dirección</string>
    <string name="ciudad">Ciudad</string>
    <string name="fecha">Fecha</string>
    <string name="carretera">Carretera</string>

    <string name="favs_add">Añadir a favoritos</string>
    <string name="favs_remove">Quitar de favoritos</string>

    <string name="logout">Cerrar sesión</string>

    <string name="input_empty">No puede estar vacío</string>
    <string name="mail_no_at">No contiene arroba (@)</string>
    <string name="mail_more_than_one_at">No puede tener más de un arroba (@)</string>
    <string name="invalid_format">Formato incorrecto</string>
    <string name="mail_already_exists">Este correo ya existe</string>
    <string name="password_repeat_notequal">Las contraseñas no coinciden</string>

</resources>